# Templates

./: .gitignore  README.md  requirements.txt  setup.cfg
templates/: __init__.py  __main__.py  flags.json  template_map.json
templates/schemas/: argument.schema.json
templates/templates/: .gitignore  README.md
templates/templates/c/: core.h  header.h  source.c
templates/templates/cpp/: core.hh  header.hh  source.cc
templates/templates/py/: __init__.py  pypi_classifiers.txt  setup.cfg
