[metadata]
name = {Project}
version = attr:{project}.__version__
description = file: README.md
keywords = python
license = Apache-2.0 license
classifiers = 
    Programming Language :: Python

[options]
packages = find:
requires =
    file: requirements.txt

[options.packages.find]
exclude =
    docs*
    examples*
    tests*
